tests/integration/pass/arena_allocation.alo
struct Point {
  x: int,
  y: int
}

fun main() -> void {
  imut arena = arena_new();

  imut p: &Point = new(arena) Point {
    x: 10,
    y: 20
  };

  assert_msg(p->x == 10, "arena point x works");
  assert_msg(p->y == 20, "arena point y works");

  arena_free_all(arena);
}
