tests/integration/error/named_struct_unknown_field.alo
// expect-error: Struct 'Point' has no field 'z'

struct Point {
  x: int,
  y: int
}

fun main() -> void {
  imut p: Point = Point {
    x: 10,
    y: 20,
    z: 30
  };
}
